crates/gitr/src/parse/snapshots/gitr__parse__tests__snapshot_parse_blame_empty_lines.snap
---
source: crates/gitr/src/parse/mod.rs
expression: lines
---
[
    BlameLine {
        commit: "abc123",
        author: "Alice",
        author_mail: "alice@example.com",
        author_time: "1700000000",
        line_no: 1,
        content: "",
    },
]
