crates/gitr/src/parse/snapshots/gitr__parse__tests__snapshot_parse_branches_with_spaces.snap
---
source: crates/gitr/src/parse/mod.rs
expression: b
---
[
    "my branch",
    "another branch name",
]
