crates/gitr/src/parse/snapshots/gitr__parse__tests__snapshot_parse_diff_new_file.snap
---
source: crates/gitr/src/parse/mod.rs
expression: files
---
[
    FileDiff {
        old_path: None,
        new_path: Some(
            "new.txt",
        ),
        is_binary: false,
        mode_changed: false,
        old_mode: None,
        new_mode: None,
        hunks: [
            DiffHunk {
                old_start: 0,
                old_lines: 0,
                new_start: 1,
                new_lines: 2,
                section: "",
                lines: [
                    DiffLine {
                        kind: Insertion,
                        content: "hello",
                    },
                    DiffLine {
                        kind: Insertion,
                        content: "world",
                    },
                ],
            },
        ],
    },
]
