crates/gitr/src/parse/snapshots/gitr__parse__tests__snapshot_parse_diff_renamed_file.snap
---
source: crates/gitr/src/parse/mod.rs
expression: files
---
[
    FileDiff {
        old_path: Some(
            "old.txt",
        ),
        new_path: Some(
            "new.txt",
        ),
        is_binary: false,
        mode_changed: false,
        old_mode: None,
        new_mode: None,
        hunks: [],
    },
]
