crates/gitr/src/parse/snapshots/gitr__parse__tests__snapshot_parse_diff_shortstat_empty.snap
---
source: crates/gitr/src/parse/mod.rs
expression: s
---
DiffShortstat {
    files_changed: 0,
    insertions: 0,
    deletions: 0,
}
