crates/gitr/src/parse/snapshots/gitr__parse__tests__snapshot_parse_diff_shortstat_full.snap
---
source: crates/gitr/src/parse/mod.rs
expression: s
---
DiffShortstat {
    files_changed: 2,
    insertions: 10,
    deletions: 5,
}
